...
                        
                        RoundedRectangle(cornerRadius: viewModel.isRecording ? 8 : 32.5)
                            .fill(Color.red)
                            .frame(width: viewModel.isRecording ? 45 : 65, height: viewModel.isRecording ? 45 : 65)
                    }
                }
                .accessibilityIdentifier("recordButton")
                .buttonStyle(PlainButtonStyle())
                .animation(.spring(), value: viewModel.isRecording)
                .padding(.bottom, 30)
            }
        }
    }
...
